--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.ts",
   "scripts": {
     "start": "electron-forge start",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
@@ -26,9 +26,14 @@
     "@electron-forge/maker-squirrel": "^6.4.2",
     "@electron-forge/maker-zip": "^6.4.2",
     "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
-    "electron": "^26.2.1"
+    "electron": "^26.2.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
