--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "electron-forge start",
     "test": "jest",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "format": "prettier . --write"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,8 @@
     "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
     "electron": "^26.2.1",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "3.0.3"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
