--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,10 @@
     "@electron-forge/maker-squirrel": "^6.4.2",
     "@electron-forge/maker-zip": "^6.4.2",
     "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "electron": "^26.2.1",
+    "eslint": "^8.49.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "3.0.3"
