Move application code to src directory
Signed-off-by: José Lucas Silva Mayer <josemayer@usp.br>

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "git-interfacil",
   "version": "1.0.0",
   "description": "Projeto de interface gráfica para o GIT.",
-  "main": "main.ts",
+  "main": "src/main.ts",
   "scripts": {
     "start": "electron-forge start",
     "test": "jest",
