Remove no var requires rule of ESLint
Signed-off-by: José Lucas Silva Mayer <josemayer@usp.br>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,5 +10,7 @@
     "ecmaVersion": "latest"
   },
   "plugins": ["@typescript-eslint"],
-  "rules": {}
+  "rules": {
+    "@typescript-eslint/no-var-requires": "off"
+  }
 }
