Add format checker script
Signed-off-by: José Lucas Silva Mayer <josemayer@usp.br>

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "format": "prettier . --write",
+    "format-check": "prettier . --check",
     "lint": "eslint ."
   },
   "repository": {
