--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,8 @@ on:
       - main
   pull_request:
     branches:
-      - '*'
-      
+      - "*"
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -17,23 +17,23 @@ jobs:
         node-version: [19.x, 20.x]
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
-      
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: npm install
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
 
-    - name: Run tests
-      run: npm test
+      - name: Install dependencies
+        run: npm install
 
-    - name: Run format checker
-      run: npm run format-check
+      - name: Run tests
+        run: npm test
 
-    - name: Run ESLint
-      run: npm run lint
+      - name: Run format checker
+        run: npm run format-check
+
+      - name: Run ESLint
+        run: npm run lint
