--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "electron": "^26.2.1",
+    "electron-reloader": "^1.2.3",
     "eslint": "^8.49.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
