--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "prettier": "3.0.3"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "nodegit": "^0.27.0"
   },
   "jest": {
     "testEnvironment": "jsdom"
