--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,10 @@
     "commonjs": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
-  "parser": "@typescript-eslint/parser",
+  "extends": ["eslint:recommended"],
   "parserOptions": {
     "ecmaVersion": "latest"
   },
-  "plugins": ["@typescript-eslint"],
   "rules": {
     "@typescript-eslint/no-var-requires": "off"
   }
