--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
 
+      - name: Install required package libraries
+        run: sudo apt-get install -y libkrb5-dev
+
       - name: Install dependencies
         run: npm install
 
