Add jest-fetch-mock module
Signed-off-by: José Lucas Silva Mayer <josemayer@usp.br>

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "prettier": "3.0.3"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "jest-fetch-mock": "^3.0.3"
   },
   "jest": {
     "testEnvironment": "jsdom",
