Add start-prod script to start production
Signed-off-by: José Lucas Silva Mayer <josemayer@usp.br>

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "start": "electron-forge start",
+    "start-prod": "NODE_ENV=production electron-forge start",
     "test": "jest",
     "package": "electron-forge package",
     "make": "electron-forge make",
